Started the insights cards and created the main style file

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="../css/config.css">
     <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/container.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Fleeve App</title>
 </head>
 
 <body>
     <div class="container">
+
         <aside class="sidebar">
             <div class="sidebar__top">
                 <div class="sidebar__top-logo">
@@ -53,6 +55,65 @@
 
             </div>
         </aside>
+
+        <main>
+            <h1 class="main__title">Dashboard</h1>
+            <div class="container__cards">
+                <div class="main__cards">
+                    <span class="material-symbols-sharp">bar_chart</span>
+                    <div class="main__cards-middle">
+                        <h3>Custo com Combustíveis</h3>
+                        <h1>R$ 178 mil</h1>
+                    </div>
+                    <div class="main__cards-progress">
+                        <h3>Custo planejado</h3>
+                        <svg>
+                            <circle cx="38" cy="38" r="36"></circle>
+                        </svg>
+                        <div class="main__cards-number">
+                            <p>75%</p>
+                        </div>
+                    </div>
+                    <small class="main__cards-text">Últimos 30 dias</small>
+                </div>
+
+                <div class="main__cards">
+                    <span class="material-symbols-sharp">bar_chart</span>
+                    <div class="main__cards-middle">
+                        <h3>Custo com Manutenção</h3>
+                        <h1>R$ 85 mil</h1>
+                    </div>
+                    <div class="main__cards-progress">
+                        <h3>Custo planejado</h3>
+                        <svg>
+                            <circle cx="38" cy="38" r="36"></circle>
+                        </svg>
+                        <div class="main__cards-number">
+                            <p>85%</p>
+                        </div>
+                    </div>
+                    <small class="main__cards-text">Últimos 30 dias</small>
+                </div>
+
+                <div class="main__cards">
+                    <span class="material-symbols-sharp">bar_chart</span>
+                    <div class="main__cards-middle">
+                        <h3>Custo com Multas</h3>
+                        <h1>R$ 8 mil</h1>
+                    </div>
+                    <div class="main__cards-progress">
+                        <h3>Custo planejado</h3>
+                        <svg>
+                            <circle cx="38" cy="38" r="36"></circle>
+                        </svg>
+                        <div class="main__cards-number">
+                            <p>50%</p>
+                        </div>
+                    </div>
+                    <small class="main__cards-text">Últimos 30 dias</small>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 
